--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
           <span slot="person-age">36</span>
           <span slot="person-occupation">Accountant</span>
         </person-details>
+
+        <!-- Passing Data Using Attributes -->
+        <custom-list filter="some filter"></custom-list>
+
         <!-- <button id="bwl" class="btn btn-primary" type="button">
             <span
               class="spinner-grow spinner-grow-sm"
